@@ -60,7 +60,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends \
             ${{ matrix.cxx }} ${{matrix.cc }} \
-            libfmt-dev libboost-dev \
+            libfmt-dev \
             libgtest-dev \
             libpcre2-dev \
             libsystemd-dev libdbus-1-dev \
@@ -137,7 +137,6 @@ jobs:
           brew install \
             meson ninja \
             fmt \
-            boost \
             googletest \
             icu4c \
             ffmpeg \
