@@ -36,7 +36,7 @@ if get_option('httpd')
     'httpd/HttpdClient.cxx',
     'httpd/HttpdOutputPlugin.cxx',
   ]
-  output_plugins_deps += [ event_dep, net_dep, boost_dep ]
+  output_plugins_deps += [ event_dep, net_dep ]
   need_encoder = true
 endif
 
@@ -177,7 +177,6 @@ output_plugins = static_library(
     sles_dep,
     winmm_dep,
     wasapi_dep,
-    boost_dep,
     output_plugins_deps,
   ],
 )
